# Distribution-list

./: CMakeLists.txt  Main.qml  README.md  main.cpp  smtp.cpp  smtp.h  smtpupr.cpp  smtpupr.h
